[package]
name = "lhapdf"
version = "0.1.1"
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/cschwan/lhapdf"
readme = "README.md"
keywords = ["high-energy-physics", "physics"]
categories = ["science"]
description = "(Unofficial) Rust bindings for the LHAPDF C++ library"

[dependencies]
cpp = "0.5"

[build-dependencies]
cpp_build = "0.5"
pkg-config = "0.3"
